# makemore

./: README.md  makemore_part1.ipynb  makemore_part1_bigrams.ipynb  makemore_part2.ipynb  makemore_part3.ipynb  makemore_part4.ipynb  makemore_part5.ipynb  pyproject.toml
src/makemore/: __init__.py  part3.py  part5.py
