[project]
name = "makemore"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Sebastian Barrios", email = "sbarrios93@gmail.com" }]
dependencies = [
    "torch>=2.2.0",
    "matplotlib>=3.7.4",
    "tqdm>=4.66.2",
    "ipywidgets>=8.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "makemore:hello"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.2",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/makemore"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
[tool.ruff.format]
